<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginForm">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="0"
      android:orientation="vertical"
      android:gravity="center"
      >

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LabelLogin"
        android:textSize="40sp"
        android:textColor="@color/black"

        />
    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"/>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="2"
      android:orientation="vertical"
      android:gravity="center"
      >

    <TextView
        android:id="@+id/textViewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/LabelUser"
        android:layout_gravity="left"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/ExampleLabel" />

    <TextView
        android:id="@+id/textViewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:text="@string/LabelPass"
        android:layout_gravity="left"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/ExampleLabel" />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_weight="3">

    <Button
        android:id="@+id/buttonReturn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:text="@string/BotonBack"
        android:theme="@style/Theme.Miprueba"
        app:rippleColor="#2FB32A" />
    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:text="@string/BotonConfirm"
        android:theme="@style/Theme.Miprueba"
        app:rippleColor="#2FB32A" />
  </LinearLayout>
</LinearLayout>